Add API for my own projects (testv4)

--- a/content/projects/sample-project.mdx
+++ b/content/projects/sample-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sample Project
+title: Sample Project Example
 description: This is a sample project description.
 repository: https://github.com/example/sample-project
 date: 2024-04-23
