--- a/content/projects/krealabs.mdx
+++ b/content/projects/krealabs.mdx
@@ -1,13 +1,13 @@
 ---
-title: Sample Project Example
+title: Krealabs Website
 description: This is a sample project description.
-repository: https://github.com/example/sample-project
+repository: https://github.com/example/krealabs
 url: url
-date: 2024-04-23
+date: 2024-05-05
 published: true
 ---
 
-# Sample Project
+# Krealabs
 
 This is the body of the sample project.
 
