Create a template exmaple for krealabs.fr

--- a/content/projects/project2.mdx
+++ b/content/projects/project2.mdx
@@ -1,13 +1,13 @@
 ---
-title: Krealabs Website
+title: Project 2
 description: This is a sample project description.
-repository: https://github.com/example/krealabs
+repository: https://github.com/example/project
 url: url
 date: 2024-05-05
 published: true
 ---
 
-# Krealabs
+# Project 2
 
 This is the body of the sample project.
 
