--- a/content/projects/project3.mdx
+++ b/content/projects/project3.mdx
@@ -1,12 +1,12 @@
 ---
-title: Social Network Project
+title: Project 3
 description: A social network project built with Next.js
 repository: https://github.com/makcimerrr/social-network
 date: 2024-04-24
 published: true
 ---
 
-# Social Network Project
+# Project 3
 
 ## Overview
 
