--- a/content/projects/make-your-game.mdx
+++ b/content/projects/make-your-game.mdx
@@ -2,6 +2,7 @@
 title: Dunk Hunt
 description: 🦆 Dunk Hunt Game in JS
 repository: makcimerrr/make-your-game
+url: https://port-folio-duck-hunt.vercel.app
 date: 2024-01-10
 published: true
 ---
