:rocket: modif project bot zone01 and readme

--- a/content/projects/discord-bot.mdx
+++ b/content/projects/discord-bot.mdx
@@ -1,6 +1,6 @@
 ---
-title: Bot Discord de Recherches d'Emplois
-description: 🤖 Ce projet consiste en un bot Discord qui automatise la création de threads pour les offres d'emploi publiées sur LinkedIn et Indeed. Le bot récupère les dernières offres pour des développeurs en alternance à Rouen, France, les affiche dans un canal dédié et met à jour les informations deux fois par jour. Il offre également une commande manuelle pour forcer la mise à jour des offres d'emploi.
+title: Bot Discord Recherches d'Emplois - Aide aux Apprenants
+description: 🤖 Ce projet consiste en un bot Discord qui automatise la création de threads pour les offres d'emploi publiées sur LinkedIn et Indeed. Le bot récupère les dernières offres pour des développeurs en alternance à Rouen, France, les affiche dans un canal dédié et met à jour les informations deux fois par jour. En plus de cela, il offre une commande manuelle pour forcer la mise à jour des offres d'emploi, assurant ainsi que les utilisateurs restent informés en temps réel des opportunités disponibles.Le bot facilite également la mise en relation des apprenants en génie logiciel à travers une fonctionnalité de réaction à un message spécifique. En réagissant, les utilisateurs signalent qu'ils ont besoin d'aide et sont automatiquement attribués à un rôle spécifique. Un message est alors posté dans un canal dédié pour encourager la collaboration et le soutien entre les membres.
 repository: makcimerrr/bot-discord-zone01
 date: 2024-06-14
 published: true
@@ -40,7 +40,7 @@ Si vous souhaitez contribuer à ce projet, vous pouvez :
 
 ## Auteurs
 
-Ce bot a été créé par [Votre Nom] pour [Nom du Serveur Discord].
+Ce bot a été créé par [Maxime Dubois](https://github.com/makcimerrr) pour [Zone01 Rouen Normandie](https://zone01rouennormandie.org).
 
 ## Licence
 
