:rocket: change github repository

--- a/content/projects/krealabs.mdx
+++ b/content/projects/krealabs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Krealabs Website
 description: Our Website Freelance
-repository: https://github.com/example/krealabs
+repository: makicmerrr/krealabs
 url: url
 date: 2024-05-05
 published: true
