--- a/content/projects/social-network.mdx
+++ b/content/projects/social-network.mdx
@@ -1,7 +1,7 @@
 ---
 title: Social Network Project
 description: A social network project built with Next.js
-repository: https://github.com/makcimerrr/social-network
+repository: makcimerrr/social-network
 date: 2024-06-18
 published: true
 ---
